--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///./2024_GNU_FIESTA.db
+sqlalchemy.url = sqlite:///./2024_GNU_PIESTA.db
 
 
 [post_write_hooks]
