booth_list, detail  연결

--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,venv,dotenv,macos,windows
+
+.env
